# python-django-developer-project-52

./: README.md  pyproject.toml  requirements.txt
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: .env  settings.py  urls.py  views.py
task_manager/users/: forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_delete_usermodel.py
task_manager/users/templates/users/: index.html  register.html
templates/: about.html  base.html  index.html  login.html  navigation.html
