[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Andreeva Polina <ferummm.it@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
